# my_cs336_spring_assignment5

./: .gitignore  README.md  demo.py  pyproject.toml
cs336_alignment/: data_process.py  drgrpo_grader.py  eval.py  eval_math12k.py  grpo.py  interact.ipynb  train_grpo.py  train_sft.py  utils.py
tests/: adapters.py  conftest.py
